<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/myText"
            android:freezesText="true"
            android:gravity="right|center_vertical"/>
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/CE"
            android:id="@+id/buttonCE"
            android:layout_column="0"
            android:layout_weight="1"
            android:background="#ff0000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/С"
            android:id="@+id/buttonC"
            android:layout_column="1"
            android:layout_weight="1"
            android:background="#ff0000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Arrow"
            android:id="@+id/buttonArrow"
            android:layout_column="2"
            android:layout_weight="1"
            android:background="#ff0000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/slash"
            android:id="@+id/buttonSlash"
            android:layout_column="3"
            android:layout_weight="1"
            android:background="#ffffff"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:id="@+id/button7"
            android:layout_column="0"
            android:layout_weight="1"
            android:background="#ff5500"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:id="@+id/button8"
            android:layout_column="1"
            android:layout_weight="1"
            android:background="#ff5500"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:id="@+id/button9"
            android:layout_column="2"
            android:layout_weight="1"
            android:background="#ff5500"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/asterisk"
            android:id="@+id/buttonAst"
            android:layout_column="3"
            android:layout_weight="1"
            android:background="#ffffff"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:id="@+id/button4"
            android:layout_column="0"
            android:layout_weight="1"
            android:background="#ff5500"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:id="@+id/button5"
            android:layout_column="1"
            android:layout_weight="1"
            android:background="#ff5500"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:id="@+id/button6"
            android:layout_column="2"
            android:layout_weight="1"
            android:background="#ff5500"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:id="@+id/buttonMinus"
            android:layout_column="3"
            android:layout_weight="1"
            android:background="#ffffff"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:id="@+id/button1"
            android:layout_column="0"
            android:layout_weight="1"
            android:background="#ff5500"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:id="@+id/button2"
            android:layout_column="1"
            android:layout_weight="1"
            android:background="#ff5500"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:id="@+id/button3"
            android:layout_column="2"
            android:layout_weight="1"
            android:background="#ff5500"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:id="@+id/buttonPlus"
            android:layout_column="3"
            android:layout_weight="1"
            android:background="#ffffff"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/plusminus"
            android:id="@+id/buttonPM"
            android:layout_weight="1"
            android:layout_column="0"
            android:background="#0000ff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:id="@+id/button0"
            android:layout_weight="1"
            android:layout_column="1"
            android:background="#ff5500"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/point"
            android:id="@+id/buttonPoint"
            android:layout_weight="1"
            android:layout_column="2"
            android:background="#0000ff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/equals"
            android:id="@+id/buttonEq"
            android:layout_weight="1"
            android:layout_column="3"
            android:background="#ffff00"/>
    </TableRow>

</TableLayout>